# hortus-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: DeployToPages.yml  MainDistributionPipeline.yml  release.yml
docs/superpowers/plans/: 2026-04-29-declarative-pipeline-phase1-phase2.md  2026-04-30-pipeline-persistence.md  2026-05-03-pipeline-status-deps-plan.md  2026-05-03-rename-system-tables-plan.md  (+2 more)
scripts/: switch-duckdb-version.sh
src/: hortus_pipeline_extension.cpp
src/catalog/: materialized_view_catalog.cpp
src/executor/: dag_resolver.cpp  expectation_checker.cpp  materializer.cpp
src/functions/: alter_materialized_view.cpp  create_materialized_view.cpp  drop_materialized_view.cpp  explain_materialized_view.cpp  pipeline_expectation_logs.cpp  pipeline_expectations.cpp  pipeline_run_logs.cpp  pipeline_schedules.cpp  pipeline_status.cpp  refresh_materialized_view.cpp
src/include/: hortus_pipeline_extension.hpp
src/parser/: pipeline_parser.cpp
src/persistence/: pipeline_persistence.cpp
src/scheduler/: scheduler.cpp
test/sql/: alter_materialized_view.test  best_effort.test  create_materialized_view.test  dag_resolution.test  drop_materialized_view.test  expectation_metrics.test  expectations.test  explain.test  hortus_pipeline.test  integration.test  persistence.test  pipeline_fires.test  pipeline_status.test  pipeline_status_auto_deps.test  refresh_materialized_view.test  run_logs.test  schedule_syntax.test  scheduler_trigger_value.test  show_monitoring.test
(+15 files in other folders)
